--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,9 @@ django-cors-headers==4.3.1
 dj-database-url==2.1.0
 Django==5.0.6
 djangorestframework==3.15.1
+gunicorn==22.0.0
 Pillow==10.4.0
+psycopg2-binary==2.9.9
 pytz==2024.1
 sqlparse==0.5.0
 whitenoise==6.7.0
